--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <head>
-<title>Dating Happy</title>
+<title>Streaming Movie</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta property="og:title" content="Free Movie Streaming">
 <meta property="og:description" content="Click and Sign up For watching Movie">
